--- a/.github/workflows/SukeTV.yml
+++ b/.github/workflows/SukeTV.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Buletin TV3
+name: Suke TV
 
 # Controls when the action will run. 
 on:
@@ -41,8 +41,8 @@ jobs:
       - name: Main
         run: |
           pwd
-          chmod +x BuletinTV3.sh
-          ./BuletinTV3.sh
+          chmod +x SukeTV.sh
+          ./SukeTV.sh
         
       - name: git add
         run: |
